--- a/IndicaEdad/css/style.css
+++ b/IndicaEdad/css/style.css
@@ -2,19 +2,18 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 h1{
-    color: blueviolet;
+    color: blue;
     text-align: center;
 }
 .contenedor{
-    max-width: 60%;
+    max-width: 80%;
     margin: auto;
 }
 
-#imgDni, div{
+#imgEdad, div{
     text-align: center;   
 }
-#msnError{ 
-    color: blueviolet;
+#msnEdad{ 
+    color: blue;
     font-style: italic;
 }
-
