--- a/Zoo/css/style.css
+++ b/Zoo/css/style.css
@@ -105,6 +105,13 @@ margin:0;
   box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
 }
+.centrado2{
+    text-align: center;
+}
+.carruselIMG{
+    display: inline;
+    width: 33.3%;
+}
 
 
 
