--- a/Zoo/css/style.css
+++ b/Zoo/css/style.css
@@ -113,6 +113,60 @@ margin:0;
     width: 33.3%;
 }
 
+input, select, textarea {
+    width: 100%; 
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
+    }
+  
+  
+  #boton {
+    background-color: #45a049;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  
+  #boton:hover {
+    background-color: #45a049;
+  }
+  
+
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+
+  .telOculto, .emailOculto, .correoOculto {
+    display: none;
+  }
+  .galeria{
+
+    display:flex;
+  }
+  .galeria div{
+    width: 33%;
+    padding: 10px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .imagen{
+    width: auto;
+    height: 250px;
+
+  }
+  
+ 
 
 
 
