--- a/CalendarioVacunacion/css/style.css
+++ b/CalendarioVacunacion/css/style.css
@@ -3,6 +3,7 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
+    font-size: x-large;
     padding: auto;
     margin: 0;
 }
@@ -19,4 +20,7 @@ body{
 .container{ 
     text-align: center;
     background-color: #a5cfed;
+}
+.entrada{
+    font-size: x-large;
 }
